--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <meta charset="utf-8">
 </head>
 <body>
+  <div id="gamearea">
   <script src="sketch.js"></script>
+  </div>
 </body>
 </html>
